--- a/blat/templates/blat/detail.html
+++ b/blat/templates/blat/detail.html
@@ -1,8 +1,14 @@
-<dl>
-    <dd>{{blat.text}}</dd>
-    <dt>{{blat.created_on}}
-        {%if blat.via %}
-        <a href="{{blat.via}}">/via</a>
-        {% endif %}
-    </dt>
-</dl>
+{% extends "blat/master.html" %}
+
+{% block title %}Blat details{% endblock %}
+
+{% block content %}
+    <dl>
+        <dd>{{blat.text}}</dd>
+        <dt>{{blat.created_on}}
+            {%if blat.via %}
+            <a href="{{blat.via}}">/via</a>
+            {% endif %}
+        </dt>
+    </dl>
+{% endblock %}
