--- a/blat/templates/blat/home.html
+++ b/blat/templates/blat/home.html
@@ -1,15 +1,20 @@
+{% extends "blat/master.html" %}
 {% load humanize %}
-{% if blat_list %}
-  <dl>
-  {% for blat in blat_list %}
-    <dt>{{blat.text}}</dt>
-    <dd>
-      <a href="{{blat.id}}">{{blat.created_on|naturaltime}}
-      {% if blat.via %}
-        <a href="{{blat.via}}">/via</a>
-      {% endif %}
-  {% endfor %}
-  </dl>
-{% else %}
-  :-(
-{% endif %}
+
+{% block content %}
+    {% if blat_list %}
+        <dl>
+        {% for blat in blat_list %}
+            <dt>{{blat.text}}</dt>
+            <dd>
+                <a href="{% url 'detail' pk=blat.id %}">{{blat.created_on|naturaltime}}</a>
+                {% if blat.via %}
+                    <a href="{{blat.via}}">/via</a>
+                {% endif %}
+        {% endfor %}
+        </dl>
+    {% else %}
+        :-(
+    {% endif %}
+{% endblock %}
+
