Fixed error in urls.py for logout. Also finished video 3.1.

--- a/blat/templates/blat/home.html
+++ b/blat/templates/blat/home.html
@@ -8,6 +8,7 @@
             <dt>{{blat.text}}</dt>
             <dd>
                 <a href="{% url 'detail' pk=blat.id %}">{{blat.created_on|naturaltime}}</a>
+                by @{{blat.created_by}}
                 {% if blat.via %}
                     <a href="{{blat.via}}">/via</a>
                 {% endif %}
