--- a/blat/templates/blat/master.html
+++ b/blat/templates/blat/master.html
@@ -12,9 +12,10 @@
     <nav>
         <ul>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'logout' %}?next=/">Logout</a></li>
+                <li><a href="{% url 'myview' %}">My blats</a></li>
+                <li><a href="{% url 'logout' %}?next=/">Logout</a></li>
             {% else %}
-            <li><a href="/login/?next=/">Log in</a></li>
+                <li><a href="/login/?next=/">Log in</a></li>
             {% endif %}
         </ul>
     </nav>
