--- a/blat/templates/blat/master.html
+++ b/blat/templates/blat/master.html
@@ -12,6 +12,10 @@
     <nav>
         <ul>
             {% if user.is_authenticated %}
+                <li>Logged in as: {{user}}. {{user.profile.bio}}
+                    {% if user.profile.blog %}
+                        <a href="{{user.profile.blog}}">blog</a>
+                    {% endif %}
                 <li><a href="{% url 'myview' %}">My blats</a></li>
                 <li><a href="{% url 'logout' %}?next=/">Logout</a></li>
             {% else %}
