--- a/blat/templates/blat/home.html
+++ b/blat/templates/blat/home.html
@@ -12,6 +12,9 @@
                 {% if blat.via %}
                     <a href="{{blat.via}}">/via</a>
                 {% endif %}
+                {% if blat.created_by == user %}
+                    <a href="{% url 'editblat' pk=blat.id %}">edit this</a>
+                {% endif %}
         {% endfor %}
         </dl>
     {% else %}
